--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <h2>Choose Grid Size</h2>
     <form id="sizePicker">
-        Grid Height:
-        <input type="number" id="input_height" name="height" min="1" value="3">
+        <label for="input_height">Grid Height: </label>
+        <input type="number" required id="input_height" name="height" min="1" max="50" value="3">
         Grid Width:
-        <input type="number" id="input_width" name="width" min="1" value="3">
+        <input type="number" required id="input_width" name="width" min="1" max="50" value="3">
         <input type="submit" id="send">
     </form>
 
